Connected html to database.

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
         .location:hover {
             background-color: rgba(107, 107, 107, 0.25);
         }
+
     </style>
 </head>
 <body>
@@ -38,12 +39,13 @@
             <div id="map" class="border rounded align-self-center" style="aspect-ratio: 1; width: 85%; min-width: 280px; background-color: rgba(128, 128, 128, 0.25);">
                 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1XdxktqjDYi3U-dgB7ifp09WbMlJeAks&ehbc=2E312F" width="100%" height="100%"></iframe>
             </div>
-            <div id="location-list" class="border align-self-center mt-5" style="width: 80%; aspect-ratio: .75; min-width: 280px; background-color: rgba(128, 128, 128, 0.25);">
+            <div id="location-list" class="border align-self-center mt-5" style="width: 80%; min-width: 280px; background-color: rgba(128, 128, 128, 0.25);">
                 {% for location in locations %}
                     <div class="location border-bottom pt-3 pb-3" style="padding-left: 8px;">
-                        <h4><a href="/{{location['id']}}">{{location['title']}}</a></h4>
-                        <div><b>Address: </b>{{location['address']}}</div>
-                        <div><b>Rating: </b>{{location['rating']}}/5</div>
+                        <h4><a href="/location/{{location['id']}}" style="text-decoration: none; color: black;">{{location['title']}}</a></h4>
+                        <div><b>Address: </b>{{location['location']}}</div>
+                        <div><b>Hours: </b>{{location['hours']}}</div>
+                        <div><b>Rating: </b>{{location['rating']}}</div>
                     </div>
                 {% endfor %}
             </div>
