Added location page. Added dynamic html and map to location page.

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
                     </div>
                 {% endfor %}
             </div>
-            <div id="footer" class="mt-5 text-center">
+            <div id="footer" class="mt-5 text-center border-top pt-5">
                 <h2>Submit a new location...</h2>
                 <button type="button" class="mb-5 btn btn-primary">Go to Submit Page</button>
             </div>
