--- a/templates/index.html
+++ b/templates/index.html
@@ -10,20 +10,23 @@
 
         * {
             font-family: Helvetica;
+            color: rgb(30, 30, 30);
         }
 
         #wrapper {
         	content: '';
         	position: absolute;
         	width: 100%;
-        	background-image: linear-gradient(to bottom, white, rgba(255, 255, 255, 0)), url(static/background.jpg);
+        	background-image: linear-gradient(to bottom, white, rgba(245, 245, 245, 0)), url(static/background.jpg);
             background-repeat: no-repeat;
             background-size: auto 100%;
             background-position: center center;
         }
 
-        .location:hover {
-            background-color: rgba(107, 107, 107, 0.25);
+        #locations:hover > *,
+        #locations:hover > * > *
+        {
+            color: gray;
         }
 
     </style>
@@ -36,17 +39,17 @@
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
             </p>
-            <div id="map" class="border rounded align-self-center" style="aspect-ratio: 1; width: 85%; min-width: 280px; background-color: rgba(128, 128, 128, 0.25);">
+            <div id="map" class="border rounded align-self-center" style="aspect-ratio: 1; width: 85%; min-width: 300px; max-width: 700px; background-color: rgba(128, 128, 128, 0.25);">
                 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1XdxktqjDYi3U-dgB7ifp09WbMlJeAks&ehbc=2E312F" width="100%" height="100%"></iframe>
             </div>
-            <div id="location-list" class="border align-self-center mt-5" style="width: 80%; min-width: 280px; background-color: rgba(128, 128, 128, 0.25);">
+            <div id="location-list" class="border align-self-center mt-5 pb-4" style="width: auto; min-width: 280px; background-color: rgba(128, 128, 128, 0.25); padding: 0px 20px;">
                 {% for location in locations %}
-                    <div class="location border-bottom pt-3 pb-3" style="padding-left: 8px;">
-                        <h4><a href="/location/{{location['id']}}" style="text-decoration: none; color: black;">{{location['title']}}</a></h4>
+                    <a href="/location/{{location['id']}}" id="locations" style="padding-left: 8px; text-decoration: none; color: rgb(30, 30, 30);">
+                        <h4>{{location['title']}}</h4>
                         <div><b>Address: </b>{{location['location']}}</div>
                         <div><b>Hours: </b>{{location['hours']}}</div>
-                        <div><b>Rating: </b>{{location['rating']}}</div>
-                    </div>
+                        <div class="border-bottom pb-4"><b>Rating: </b>{{location['rating']}}</div>
+                    </a>
                 {% endfor %}
             </div>
             <div id="footer" class="mt-5 text-center border-top pt-5">
