--- a/templates/locationpage.html
+++ b/templates/locationpage.html
@@ -8,45 +8,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
 
+        html {
+            background-color: rgb(200,200,200);
+        }
+
         * {
             font-family: Helvetica;
         }
 
         #wrapper {
-        	content: '';
-        	position: absolute;
-        	width: 100%;
-        	background-image: linear-gradient(to bottom, white, rgba(255, 255, 255, 0)), url(/static/background.jpg);
+            content: '';
+            position: absolute;
+            width: 100%;
+            background-image: linear-gradient(to bottom, whitesmoke, rgba(200, 200, 200, 0)), url(/static/background.jpg);
             background-repeat: no-repeat;
             background-size: auto 100%;
             background-position: center center;
         }
 
+        .navbar-brand:hover {
+            color: gray;
+        }
+
     </style>
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Saratoga Public Restrooms</a>
-        </div>
-    </nav>
-    <div id="wrapper" class="d-flex flex-column">
-        <div id="content" class="align-self-center shadow bg-light d-flex flex-column rounded mt-4 mb-5 align-items-center" style="--bs-bg-opacity: .85; width: 90%; max-width: 900px; min-width: 300px;">
-            <div id="map" class="border rounded align-self-center mt-5" style="aspect-ratio: 1; width: 85%; min-width: 280px; background-color: rgba(128, 128, 128, 0.25);">
+    <div id="wrapper" class="d-flex flex-column align-items-center">
+        <div id="content" class="shadow bg-light d-flex flex-column rounded mt-4 mb-5 align-items-center" style="--bs-bg-opacity: .85; width: 90%; max-width: 900px; min-width: 300px;">
+            <nav class="navbar bg-body-tertiary border-bottom align-self-start w-100" style="background-color: whitesmoke;">
+                <div class="container-fluid">
+                  <a class="navbar-brand fs-5" href="/">Saratoga Public Restrooms</a>
+                </div>
+            </nav>
+            <div id="map" class="border rounded align-self-center mt-4" style="aspect-ratio: 1; width: 85%; min-width: 300px; max-width: 700px; background-color: rgba(128, 128, 128, 0.25);">
                 <iframe src="{{location['map']}}" width="100%" height="100%"></iframe>
             </div>
-            <h1 class="text-center p-2 mt-4" style="font-size: 3rem;">{{location['title']}}</h1>
+            <h1 class="text-center p-2 mt-3" style="font-size: 3rem;">{{location['title']}}</h1>
             <h3 class="text-center">{{location['location']}}</h3>
             <h3><b>Rating:</b> {{location['rating']}}</h3>
             <div id="comments" class="border mt-5 mb-5" style="width: 80%; height: 800px;">
 
             </div>
             <div id="footer" class="mt-5 text-center border-top pt-5 w-100">
-                <h2>Submit a new location...</h2>
-                <button type="button" class="mb-5 btn btn-primary">Go to Submit Page</button>
+                <h2>Submit a new comment...</h2>
+                <button type="button" class="mb-5 btn btn-primary">Enter a Comment</button>
             </div>
         </div>
-        <p id="copyright" class="text-start mb-0" style="font-size: 10px;">Peregrim Web Design</p>
+        <p id="copyright" class="text-start mb-0" style="font-size: 10px;">Copyright 2023, BSP Design</p>
     </div>
 </body>
 </html>
