--- a/templates/location_submitted.html
+++ b/templates/location_submitted.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Public Restroom | Submit Location</title>
+        <title>Location Submitted</title>
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <style>
@@ -40,20 +40,10 @@
                       <a class="navbar-brand fs-5" href="/">Saratoga Public Restrooms</a>
                     </div>
                 </nav>
-                <h1 class="mt-3 mb-3">Submit a Location</h1>
-                <form action="/location-form/submit" method="post">
-                    <div class="d-flex flex-column gap-3 align-items-center">
-                        <input class="form-control" type="text" name="location_name" placeholder="Location Name" maxlength="250" required>
-                        <input class="form-control" type="text" name="address" placeholder="Address" maxlength="250" required>
-                        <input class="form-control" type="text" name="open_hours" placeholder="Open Hours" maxlength="250" required>
-                        <textarea class="form-control" name="additional_info" id="info" placeholder="Additional Information" maxlength="1000" cols="30" rows="10"></textarea>
-                        <input type="submit" class="btn btn-outline-primary mb-5 mt-2" style="width: 150px;">
-                    </div>
-                </form>
+                <h1 class="mt-3 mb-3">Thank you!</h1>
+                <p>The information you have provided has been submitted.</p>
                 <p id="copyright" class="text-start mt-5 mb-0" style="font-size: 10px;">Copyright 2023, BSP Design</p>
             </div>
-            
-            
         </div>
     </body>
 </html>
