--- a/templates/locationpage.html
+++ b/templates/locationpage.html
@@ -40,18 +40,50 @@
                   <a class="navbar-brand fs-5" href="/">Saratoga Public Restrooms</a>
                 </div>
             </nav>
-            <div id="map" class="border rounded align-self-center mt-4" style="aspect-ratio: 1; width: 85%; min-width: 300px; max-width: 700px; background-color: rgba(128, 128, 128, 0.25);">
+            <div id="map" class="shadow border rounded align-self-center mt-4" style="aspect-ratio: 1; width: 85%; min-width: 300px; max-width: 700px; background-color: rgba(128, 128, 128, 0.25);">
                 <iframe src="{{location['map']}}" width="100%" height="100%"></iframe>
             </div>
             <h1 class="text-center p-2 mt-3" style="font-size: 3rem;">{{location['title']}}</h1>
             <h3 class="text-center">{{location['location']}}</h3>
             <h3><b>Rating:</b> {{location['rating']}}</h3>
-            <div id="comments" class="border mt-5 mb-5" style="width: 80%; height: 800px;">
-
+            <h2 class="mt-5 border-bottom">Comments</h2>
+            <div id="comments" class="mt-3 mb-5" style="width: 80%;">
+                {% for comment in comments %}
+                    {% if comment['location_id'] == location['id'] %}
+                        <div class="d-flex border shadow p-3" style="width: 100%; height: auto; background-color: rgba(128, 128, 128, 0.25);">
+                            <div style="margin-right: 20px; height: fit-content; border: solid; border-width: thin; border-radius: 50px;" class="mt-0 p-2"><img src="/static/user-icon-50.png" alt="anonymous user icon"></div>
+                            <div class="w-100">
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <div>
+                                        <h3 class="mb-1" style="color: #4d94ff;">{{comment['user_name']}}</h3>
+                                        <p class="mb-0" style="color: rgb(150, 150, 150); font-size: 14px;">{{comment['post_date']}}</p>
+                                    </div>
+                                    <p class="mb-0" style="color: rgb(150, 150, 150); font-size: 14px;"><b>Rating: </b>{{comment['rating']}}/5</p>
+                                </div>
+                                <p class="lead">{{comment['user_comment']}}</p>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
-            <div id="footer" class="mt-5 text-center border-top pt-5 w-100">
-                <h2>Submit a new comment...</h2>
-                <button type="button" class="mb-5 btn btn-primary">Enter a Comment</button>
+            <div id="footer" class="mt-5 border-top pt-5 w-100 d-flex flex-column align-items-center">
+                
+                <form action="/location/{{location['id']}}/comment-submit" method="post">
+                    <h2 class="mb-3 text-center">Leave a Comment...</h2>
+                    <div class="d-flex flex-column gap-3 align-items-center">
+                        <input class="form-control align-self-start" style="width: 250px;" type="text" name="user_name" placeholder="Name" maxlength="20" required>
+                        <select class="form-select align-self-start" style="width: 100px;" name="rating" aria-label="rating 1 through 5" required>
+                            <option value="" selected>Rating</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                        <textarea class="form-control" name="comment" id="comment" placeholder="Comment" maxlength="250" cols="50" rows="10" required></textarea>
+                        <input type="submit" class="btn btn-outline-primary mb-5 mt-2" style="width: 150px;">
+                    </div>
+                </form>
             </div>
         </div>
         <p id="copyright" class="text-start mb-0" style="font-size: 10px;">Copyright 2023, BSP Design</p>
