Minor adjustment to comment styles.

--- a/templates/locationpage.html
+++ b/templates/locationpage.html
@@ -66,7 +66,7 @@
                     {% endif %}
                 {% endfor %}
             </div>
-            <div id="footer" class="mt-5 border-top pt-5 w-100 d-flex flex-column align-items-center">
+            <div id="footer" class="mt-3 pt-5 w-100 d-flex flex-column align-items-center">
                 
                 <form action="/location/{{location['id']}}/comment-submit" method="post">
                     <h2 class="mb-3 text-center">Leave a Comment...</h2>
